xdgshellwindow: ignore window position rules placing windows outside of all screens

BUG: 464047